--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate && node .all-contributors-html.js",
     "contributors:check": "all-contributors check"
-
   },
   "husky": {
-    "hooks": { "pre-commit": "npx lint-staged" }
+    "hooks": {
+      "pre-commit": "npx lint-staged"
+    }
   },
   "commitlint": {
     "extends": [
@@ -54,12 +55,14 @@
     "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
     "@angular/core": "~10.1.2",
+    "@material/rtl": "7.0.0",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.2",
     "@angular/material": "^10.2.2",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -74,12 +77,11 @@
     "@ngx-translate/http-loader": "6.0.0",
     "bootstrap": "^4.5.0",
     "browser-detect": "^0.2.28",
+    "ng-recaptcha": "6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.0",
-    "zone.js": "~0.10.3",
-    "ng-recaptcha": "6.0.2",
-    "@auth0/angular-jwt": "^5.0.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.2",
