--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@ngrx/store-devtools": "10.0.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
+    "ngx-logger": "4.0.8",
     "bootstrap": "^4.5.0",
     "browser-detect": "^0.2.28",
     "ng-recaptcha": "6.0.2",
