--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "angular-ngrx-material-starter",
+  "name": "NG10Zero",
   "version": "10.0.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "update:packages": "rm -rf node_modules && npm cache clean --force && npm update --save-dev",
     "update": "ng update --all=true --save-dev",
-    "reinstall": "npm run clean && npm install",
+    "reinstall": "rm -rf node_modules && npm cache clean --force && && npm install",
     "clean": "rm -rf node_modules && npm cache clean --force",
     "rebuild": "npm run clean && npm install && npm run build",
     "start": "ng serve --open",
@@ -23,11 +23,13 @@
     "format:write": "prettier projects/**/*.{ts,json,md,scss} --write",
     "format:test": "prettier projects/**/*.{ts,json,md,scss} --list-different",
     "release": "standard-version && git push --follow-tags origin master",
-    "analyze": "npm run build:prod -- --stats-json && webpack-bundle-analyzer ./dist/angular-ngrx-material-starter/stats-es2015.json",
+    "analyze": "npm run build:prod -- --stats-json && webpack-bundle-analyzer ./dist/ngAppZero/stats.json",
     "server": "node ./projects/server/server.js",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate && node .all-contributors-html.js",
-    "contributors:check": "all-contributors check"
+    "contributors:check": "all-contributors check",
+    "bundle-report": "webpack-bundle-analyzer dist/stats.json",
+    "analyze2": "source-map-explorer dist/ngAppZero/**/*.js"
   },
   "husky": {
     "hooks": {
@@ -48,75 +50,76 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-extensions/elements": "~10.0.1",
-    "@angular-extensions/model": "^8.1.0",
-    "@angular/animations": "~10.1.2",
-    "@angular/cdk": "^10.2.2",
-    "@angular/common": "~10.1.2",
-    "@angular/compiler": "~10.1.2",
-    "@angular/core": "~10.1.2",
+    "@angular-extensions/elements": "10.1.1",
+    "@angular-extensions/model": "10.0.1",
+    "@angular/animations": "10.1.5",
+    "@angular/cdk": "10.2.4",
+    "@angular/common": "10.1.5",
+    "@angular/compiler": "10.1.5",
+    "@angular/core": "10.1.5",
     "@material/rtl": "7.0.0",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~10.1.2",
+    "@angular/forms": "10.1.5",
     "@angular/material": "^10.2.2",
-    "@angular/platform-browser": "~10.1.2",
-    "@angular/platform-browser-dynamic": "~10.1.2",
-    "@angular/router": "~10.1.2",
+    "@angular/platform-browser": "10.1.5",
+    "@angular/platform-browser-dynamic": "10.1.5",
+    "@angular/router": "10.1.5",
     "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@ngrx/effects": "10.0.0",
-    "@ngrx/entity": "10.0.0",
-    "@ngrx/router-store": "10.0.0",
-    "@ngrx/store": "10.0.0",
-    "@ngrx/store-devtools": "10.0.0",
+    "@ngrx/effects": "10.0.1",
+    "@ngrx/entity": "10.0.1",
+    "@ngrx/router-store": "10.0.1",
+    "@ngrx/store": "10.0.1",
+    "@ngrx/store-devtools": "10.0.1",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
-    "ngx-logger": "4.0.8",
-    "bootstrap": "^4.5.0",
+    "ngx-logger": "4.1.3",
+    "bootstrap": "4.5.2",
     "browser-detect": "^0.2.28",
     "ng-recaptcha": "6.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "uuid": "^8.3.0",
-    "zone.js": "~0.10.3"
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "uuid": "8.3.1",
+    "zone.js": "0.11.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.2",
-    "@angular/cli": "~10.0.2",
-    "@angular/compiler-cli": "~10.1.3",
-    "@angular/language-service": "~10.0.5",
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1",
-    "@types/angular": "^1.7.3",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.62",
-    "@types/uuid": "^8.0.0",
-    "all-contributors-cli": "^6.17.0",
-    "codelyzer": "^6.0.0",
-    "express": "^4.16.4",
+    "@angular/cli": "10.1.6",
+    "@angular/compiler-cli": "10.1.5",
+    "@angular/language-service": "10.1.5",
+    "@commitlint/cli": "9.1.2",
+    "@commitlint/config-conventional": "11.0.0",
+    "@types/angular": "1.7.3",
+    "@types/jasmine": "3.5.14",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.11.8",
+    "@types/uuid": "8.3.0",
+    "all-contributors-cli": "6.19.0",
+    "codelyzer": "6.0.1",
+    "express": "4.17.1",
     "husky": "^4.2.5",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "5.2.3",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
     "karma-spec-reporter": "^0.0.32",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^2.0.1",
+    "prettier": "2.1.2",
+    "pretty-quick": "3.0.2",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
+    "source-map-explorer": "^2.5.0",
     "standard-version": "^8.0.2",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "ts-node": "9.0.0",
+    "tslint": "6.1.3",
+    "typescript": "4.0.3",
+    "webpack-bundle-analyzer": "^3.9.0"
   }
 }
